03/04/08 Sylvain Gaillard
* New function countValues in VectorTools.

18/03/08 Julien Dutheil
* Added StatTest interface.
* Added function RandomTools::pChisq and pGamma.
* VectorTools::median now properly works.

31/01/08 Julien Dutheil
* Bug fixed in exponential law.

18/01/08 -*- Version 1.4.0 -*-

18/01/08 Celine Scornavacca & Julien Dutheil
* New functions containsAll and diff in VectorTools.

09/01/08 Julien Dutheil
* All classes included in the new 'bpp' namespace.

13/12/07 Julien Dutheil
* New method uniRoot in NumTools.

24/12/07 Julien Dutheil
* New class InvariantMixedDiscreteDistribution.

05/12/07 Julien Dutheil
* Bug fixed in recopy of MetaOptimizer.

24/11/07 Julien Dutheil
* Another bug fixed in numerical derivatives!

13/11/07 Julien Dutheil
* New class ExponentialDiscreteDistribution + bug fixed in Gamma when classes
are not distinguishables.

24/10/07 Julien Dutheil
* Added missing references in VectorTools + new methods 'append'.

22/10/07 Julien Dutheil
* Numerical derivatives improved.
* Bug fixed in UniformK01, now works on 64bits computers! 

18/10/07 Julien Dutheil
* Added new MetaOptimizer class.

24/09/07 Julien Dutheil
* New union and intersection functions in VectorTools.

24/08/07 Julien Dutheil
* New method getParameter(name) in interface Parametrizable.

24/07/07 Julien Dutheil
* VectorTools function templates updated and simplified. New weighted
  functions (mean, var, cov, cor, etc.)
* NumTools is now a fully templated static class.

06/07/07 -*- Version 1.3.0 -*-

16/06/07 Julien Dutheil
* DataTable is now Clonable, with appropriate copy constructor and assigment
operator.

29/05/05 Julien Dutheil
* Numerical derivative improved.

26/05/07 Julien Dutheil
* Conjugate gradient method added + numerical derivative classes improved.
* New nmerical derivatives "two points" method.

04/05/07 Nicolas Galtier & Julien Dutheil
* Namespace VectorFunction is removed, and static class VectorTools used
instead.