@@ -1,5 +1,6 @@
-03/04/08 Sylvain Gaillard
+03/04/08 Sylvain Gaillard & Julien Dutheil
 * New function countValues in VectorTools.
+* Parametrizable now have a getNumberOfParameters method.
 
 18/03/08 Julien Dutheil
 * Added StatTest interface.
